name:                hex
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hex#readme
license:             BSD3
-- license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , ghc-prim
  default-language:    Haskell2010
  ghc-options: -O2

test-suite hex-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bytestring
                     , criterion
                     , hex
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  extensions: OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/githubuser/hex
